Housekeeping part 1 - reduced warnings from circa 3.5K to 198
Annotations added to prevent raw type warning for generics

Serial version IDs added where appropriate

Static accesss to BidDecimal corrected

BigDecimal rounding 'modernised'

Constructors of form new Type(Type) replaced

	- new Boolean(Boolean) replaced by Boolean.TRUE/FALSE
	- other types by Type.valueOf()

clazz.newInstance() -> clazz.getDeclaredConstructor().newInstance()

Unused imports removed