@@ -47,13 +47,16 @@ public class Defclass implements Serializable {
 	 * 
 	 */
 	private static final long serialVersionUID = 1L;
+	@SuppressWarnings("rawtypes")
 	private Class OBJECT_CLASS = null;
 	private BeanInfo INFO = null;
 	private PropertyDescriptor[] PROPS = null;
 	private boolean ISBEAN = false;
 	private Method addListener = null;
 	private Method removeListener = null;
+	@SuppressWarnings("rawtypes")
 	private Map methods = new HashMap();
+	@SuppressWarnings("rawtypes")
 	private Map callMethods = new HashMap();
 	private PropertyMacros[] macros = null;
 	private boolean useMacros = false;
@@ -61,6 +64,7 @@ public class Defclass implements Serializable {
 	/**
 	 * 
 	 */
+	@SuppressWarnings("rawtypes")
 	public Defclass(Class obj) {
 		super();
 		this.OBJECT_CLASS = obj;
@@ -73,6 +77,7 @@ public class Defclass implements Serializable {
 	 * and removePropertyChangeListener(java.beans.PropertyChangeListener).
 	 * We don't require the classes extend PropertyChangeSupport.
 	 */
+	@SuppressWarnings({ "rawtypes", "unchecked" })
 	public void init() {
 		try {
 			this.INFO = Introspector.getBeanInfo(this.OBJECT_CLASS);
@@ -128,6 +133,7 @@ public class Defclass implements Serializable {
 	/**
 	 * method will try to look up add and remove property change listener.
 	 */
+	@SuppressWarnings("unchecked")
 	protected void getUtilMethods() {
 		try {
 			// since a class may inherit the addListener method from
@@ -183,6 +189,7 @@ public class Defclass implements Serializable {
 		return this.INFO;
 	}
 
+	@SuppressWarnings("rawtypes")
 	public Class getClassObject() {
 		return this.OBJECT_CLASS;
 	}
@@ -313,6 +320,7 @@ public class Defclass implements Serializable {
 	 * that template inheritance works correctly.
 	 * @param parent
 	 */
+	@SuppressWarnings({ "rawtypes", "unchecked" })
 	protected void reOrderDescriptors(Template parent) {
 		ArrayList desc = null;
 		boolean add = false;
@@ -411,6 +419,7 @@ public class Defclass implements Serializable {
 		}
 	}
 	
+	@SuppressWarnings({ "rawtypes", "unchecked" })
 	public Method getCallMethod(String name, Object[] parameters) {
 		String key = name + "(";
 		Class[] cparams = new Class[0];
@@ -443,6 +452,7 @@ public class Defclass implements Serializable {
 	 * set the use macro flag to true and set the macros. If it failed
 	 * for any reason, use macros will stay off.
 	 */
+	@SuppressWarnings({ "rawtypes", "unchecked" })
 	public void loadMacros(ClassLoader cl) {
 		String packageName = OBJECT_CLASS.getName().toLowerCase();
 		ArrayList macrolist = new ArrayList();
@@ -453,17 +463,18 @@ public class Defclass implements Serializable {
 				String formattedName = pname.substring(0,1).toUpperCase() + pname.substring(1);
 				String read = packageName + ".Read" + formattedName;
 				Class rclzz = cl.loadClass(read);
-				ReadMacro rmacro = (ReadMacro)rclzz.newInstance();
+				ReadMacro rmacro = (ReadMacro)rclzz.getDeclaredConstructor().newInstance();
 				macro.setReadMacro(rmacro);
 				
 				// create the write macro
 				String write = packageName + ".Write" + formattedName;
 				Class wclzz = cl.loadClass(write);
-				WriteMacro wmacro = (WriteMacro)wclzz.newInstance();
+				WriteMacro wmacro = (WriteMacro)wclzz.getDeclaredConstructor().newInstance();
 				macro.setWriteMacro(wmacro);
 			} catch (ClassNotFoundException exc) {
 			} catch (InstantiationException e) {
 			} catch (IllegalAccessException e) {
+			} catch (Exception e) {
 			}
 			macrolist.add(macro);
 		}
@@ -482,6 +493,7 @@ public class Defclass implements Serializable {
 	 * Method classes are not cloned. Instead, just the HashMap is cloned.
 	 * @return
 	 */
+	@SuppressWarnings("unchecked")
 	public Defclass cloneDefclass(Rete engine) {
 		Defclass dcl = new Defclass(this.OBJECT_CLASS);
 		dcl.addListener = this.addListener;
