@@ -25,19 +25,22 @@ package org.jamocha.rule;
  * @author Peter Lin
  */
 public class ComplexityFactory {
+	@SuppressWarnings("rawtypes")
 	private static Class complexityClazz = null;
 	
+	@SuppressWarnings("rawtypes")
 	public static void setComplexityClass(Class clzz) {
 		complexityClazz = clzz;
 	}
 	
+	@SuppressWarnings("unchecked")
 	public static Complexity newInstance() {
 		if (complexityClazz == null) {
 			return new DefaultComplexity();
 		} else {
 			Complexity c = null;
 			try {
-				c = (Complexity)complexityClazz.newInstance();
+				c = (Complexity)complexityClazz.getDeclaredConstructor().newInstance();
 			} catch (Exception e) {
 				
 			}
